--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,76 +6,38 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity"
     android:gravity="center"
+    android:id="@+id/gridView"
     android:padding="16dp"
     android:orientation="vertical">
 
-    <ProgressBar
-
-        android:id="@+id/progressBar"
-        style="@android:style/Widget.DeviceDefault.ProgressBar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-
     <TextView
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Movie name:"
-        android:textSize="25dp"
+        android:text="Movie name"
+        android:textAllCaps="true"
+        android:textSize="30dp"
         android:textStyle="bold" />
     <TextView
+        android:text="text"
+        android:textSize="20dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:id="@+id/tv"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="TextView"
-        android:textSize="25dp"
-        android:textStyle="normal"
         />
 
     <TextView
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Earned: "
-        android:textSize="25dp"
+        android:text="Overview: "
+        android:textAllCaps="true"
+        android:textSize="30dp"
         android:textStyle="bold" />
-    <TextView
-        android:id="@+id/tv1"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="TextView"
-        android:textSize="25dp"
-        android:textStyle="normal"
-        />
 
     <TextView
-        android:layout_width="match_parent"
+        android:text="text"
+        android:textSize="20dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Production Company name:"
-        android:textSize="25dp"
-        android:textStyle="bold" />
-    <TextView
         android:id="@+id/tv2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="TextView"
-        android:textSize="25dp"
-        android:textStyle="normal"
         />
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="id:"
-        android:textSize="25dp"
-        android:textStyle="bold" />
-    <TextView
-        android:id="@+id/tv3"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="TextView"
-        android:textSize="25dp"
-        android:textStyle="normal"
-        />
-
-
-
 </LinearLayout>
