--- a/app/src/main/res/layout/movie_list.xml
+++ b/app/src/main/res/layout/movie_list.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    android:layout_gravity="center"
-    android:gravity="center"
-    android:padding="10dp"
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:layout_gravity="center"
+    android:background="@android:color/holo_green_light"
+    android:gravity="center"
+    android:orientation="vertical"
+    android:padding="10dp">
 
     <ImageView
         android:id="@+id/movie_thumbnail"
@@ -16,14 +16,14 @@
         app:srcCompat="@android:drawable/ic_menu_gallery" />
 
     <TextView
-        android:fontFamily="verdana"
-        android:gravity="center"
-        android:layout_gravity="center"
-        android:textColor="#000"
         android:id="@+id/movie_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="15dp"
-        android:text="movie_name" />
+        android:layout_gravity="center"
+        android:fontFamily="verdana"
+        android:gravity="center"
+        android:text="movie_name"
+        android:textColor="@android:color/white"
+        android:textSize="15dp" />
 
 </LinearLayout>
