--- a/app/src/main/res/layout/movie_about.xml
+++ b/app/src/main/res/layout/movie_about.xml
@@ -9,7 +9,7 @@
     tools:context=".AboutMovie">
 
     <TextView
-        android:id="@+id/toolBar"
+        android:id="@+id/movie_name"
         android:layout_width="match_parent"
         android:layout_height="30dp"
         android:layout_alignParentBottom="true"
@@ -39,7 +39,7 @@
         android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        app:layout_constraintBottom_toTopOf="@+id/toolBar"
+        app:layout_constraintBottom_toTopOf="@+id/movie_name"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -51,7 +51,6 @@
         android:layout_width="88dp"
         android:layout_height="27dp"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginLeft="8dp"
@@ -61,18 +60,16 @@
         android:text="Overview:"
         android:textSize="20dp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/movie_overview"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/toolBar"
-        app:layout_constraintTop_toBottomOf="@+id/toolBar"
+        app:layout_constraintStart_toStartOf="@+id/movie_name"
+        app:layout_constraintTop_toBottomOf="@+id/movie_name"
         app:layout_constraintVertical_bias="0.476" />
 
     <TextView
         android:id="@+id/movieOverview"
         android:layout_width="92dp"
         android:layout_height="21dp"
-        android:layout_alignEnd="@+id/textView"
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
@@ -85,7 +82,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toolBar"
+        app:layout_constraintTop_toBottomOf="@+id/movie_name"
         app:layout_constraintVertical_bias="0.45" />
 
 </android.support.constraint.ConstraintLayout>
