--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,19 +3,19 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#083350"
     android:orientation="vertical"
     android:padding="16dp"
-    android:background="#083350"
     android:weightSum="10"
     tools:context=".MainActivity">
 
     <ProgressBar
         android:id="@+id/progressBar"
-        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
-        android:layout_width="wrap_content"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:visibility="gone" />
+        />
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -23,35 +23,33 @@
         android:layout_weight="1">
 
         <TextView
-            android:textColor="#fff"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
+            android:fontFamily="verdana"
             android:gravity="center"
             android:text="MOVIES"
+            android:textColor="#fff"
             android:textSize="30dp"
-            android:textStyle="bold"
-            android:fontFamily="verdana"
-            />
+            android:textStyle="bold" />
 
     </RelativeLayout>
 
     <GridLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="9"
-        >
+        android:layout_weight="9">
+
         <GridView
-            android:textColor="#ffffff"
-            android:background="#083350"
-            android:padding="10dp"
-            android:columnWidth="90dp"
-            android:numColumns="2"
-            android:verticalSpacing="15dp"
-            android:horizontalSpacing="10dp"
             android:id="@+id/gridView"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            android:background="#083350"
+            android:columnWidth="90dp"
+            android:horizontalSpacing="10dp"
+            android:numColumns="2"
+            android:textColor="#ffffff"
+            android:verticalSpacing="15dp" />
 
     </GridLayout>
 
