--- a/app/src/main/res/layout/movie_list.xml
+++ b/app/src/main/res/layout/movie_list.xml
@@ -4,8 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_gravity="center"
-    android:background="@android:color/holo_green_light"
     android:gravity="center"
+    android:background="#083350"
     android:orientation="vertical"
     android:padding="10dp">
 
@@ -17,7 +17,7 @@
 
     <TextView
         android:id="@+id/movie_name"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:fontFamily="verdana"
