--- a/app/src/main/res/layout/activity_tvshows_main.xml
+++ b/app/src/main/res/layout/activity_tvshows_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -7,8 +8,7 @@
     android:orientation="vertical"
     android:padding="16dp"
     android:weightSum="10"
-    tools:context=".MainActivity">
-
+    >
 
     <ProgressBar
         android:id="@+id/progressBar"
@@ -30,25 +30,14 @@
             android:layout_alignParentTop="true"
             android:fontFamily="verdana"
             android:gravity="center"
-            android:text="MOVIES"
+            android:text="TV shows"
             android:textColor="#fff"
             android:textSize="30dp"
             android:textStyle="bold"
             android:layout_alignParentLeft="true" />
 
-        <TextView
-            android:id="@+id/change_page"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_centerVertical="true"
-            android:text="See more>>"
-            android:textColor="#5BA1D0"
-            android:layout_alignParentRight="true" />
 
     </RelativeLayout>
-
-
 
     <GridLayout
         android:layout_width="match_parent"
