--- a/app/src/main/res/layout/activity_tvshows_main.xml
+++ b/app/src/main/res/layout/activity_tvshows_main.xml
@@ -11,7 +11,7 @@
     >
 
     <ProgressBar
-        android:id="@+id/progressBar"
+        android:id="@+id/TVprogressBar"
         style="?android:attr/progressBarStyleHorizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -45,7 +45,7 @@
         android:layout_weight="9">
 
         <GridView
-            android:id="@+id/gridView"
+            android:id="@+id/TVgridView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="#083350"
